feat: add customizable outing characters with archived appearances
